src/test/ui/type/type-ascription-with-fn-call.stderr
error[E0573]: expected type, found function `f`
  --> $DIR/type-ascription-with-fn-call.rs:5:5
   |
LL |     f()  :
   |          - help: did you mean to use `;` here instead?
LL |     f();
   |     ^^^
   |     |
   |     not a type
   |     expecting a type here because of type ascription

error: aborting due to previous error

